deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: isitup-org-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  labels:
    app: isitup-org
spec:
  tls:
    - hosts:
        - isitup.org
      secretName: isitup-org-tls
  rules:
    - host: isitup.org
      http:
        paths:
          - backend:
              serviceName: isitup-org
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: isitup-org
  labels:
    app: isitup-org
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: isitup-org
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isitup-org
spec:
  selector:
    matchLabels:
      app: isitup-org
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: isitup-org
    spec:
      containers:
        - name: isitup-org
          image: docker.pkg.github.com/sjparkinson/isitup.org/isitup.org:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 40m
              memory: 50Mi
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            timeoutSeconds: 3
      imagePullSecrets:
        - name: github
