deployment.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: isitup-org-ingress
spec:
  rules:
  - host: isitup.org
    http:
      paths:
      - backend:
          serviceName: isitup-org
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: isitup-org
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: isitup.org
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isitup-org
spec:
  selector:
    matchLabels:
      app: isitup.org
  replicas: 1
  template:
    metadata:
      labels:
        app: isitup.org
    spec:
      containers:
      - name: isitup-org
        image: docker.pkg.github.com/sjparkinson/isitup.org/isitup.org:latest
        ports:
          - containerPort: 80
      imagePullSecrets:
        - name: github
